@@ -1,4 +1,4 @@
-package ru.practicum.shareit.requests;
+package ru.practicum.shareit.request;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -12,12 +12,15 @@ import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import ru.practicum.shareit.ErrorHandler;
-import ru.practicum.shareit.exception.NotFoundException;
-import ru.practicum.shareit.requests.dto.ItemRequestDto;
+import ru.practicum.shareit.requests.ItemRequestController;
+import ru.practicum.shareit.requests.dto.ItemRequestCreateDto;
+import ru.practicum.shareit.requests.dto.ItemRequestResponseDto;
+import ru.practicum.shareit.requests.service.ItemRequestService;
+import ru.practicum.shareit.shared.exceptions.ErrorHandler;
+import ru.practicum.shareit.shared.exceptions.ItemNotFoundException;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -35,137 +38,104 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @Import(ValidationAutoConfiguration.class)
 public class ItemRequestControllerTest {
 
-    @Mock
-    private ItemRequestService itemRequestService;
+	private final ObjectMapper mapper = new ObjectMapper();
+	ItemRequestResponseDto itemRequestResponseDto;
+	ItemRequestResponseDto itemRequestResponseDto2;
+	ItemRequestCreateDto itemRequestCreateDto;
+	@Mock
+	private ItemRequestService itemRequestService;
+	@InjectMocks
+	private ItemRequestController controller;
+	private MockMvc mvc;
 
-    @InjectMocks
-    private ItemRequestController controller;
+	@BeforeEach
+	void setUp() {
+		mvc = MockMvcBuilders
+				.standaloneSetup(controller)
+				.setControllerAdvice(new ErrorHandler())
+				.build();
 
-    private final ObjectMapper mapper = new ObjectMapper();
+		itemRequestResponseDto = ItemRequestResponseDto.builder()
+				.id(1L)
+				.description("desc")
+				.requesterId(1L)
+				.created(LocalDateTime.now())
+				.build();
+		itemRequestResponseDto2 = ItemRequestResponseDto.builder()
+				.id(2L)
+				.description("desc")
+				.requesterId(1L)
+				.created(LocalDateTime.now())
+				.build();
+		itemRequestCreateDto = new ItemRequestCreateDto("desc");
+	}
 
+	@Test
+	void shouldReturnOk() throws Exception {
+		when(itemRequestService.getRequestListByPages(any(), anyInt(), anyInt()))
+				.thenReturn(List.of(itemRequestResponseDto, itemRequestResponseDto2));
 
-    private MockMvc mvc;
+		this.mvc.perform(get("/requests/all")
+						.header("X-Sharer-User-Id", "2")
+						.param("from", "0")
+						.param("size", "10")
+						.characterEncoding(StandardCharsets.UTF_8)
+						.contentType(MediaType.APPLICATION_JSON)
+						.accept(MediaType.APPLICATION_JSON))
+				.andExpect(jsonPath("$", hasSize(2)))
+				.andExpect(status().isOk());
+	}
 
-    List<ItemRequestDto> list;
+	@Test
+	void givenAnInvalidRequestDtoShouldThrowError() throws Exception {
+		var itemRequestDto = new ItemRequestCreateDto();
+		mvc.perform(post("/requests")
+						.header("X-Sharer-User-Id", "2")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(mapper.writeValueAsString(itemRequestDto)))
+				.andExpect(status().isBadRequest());
+	}
 
+	@Test
+	void createSuccess() throws Exception {
+		when(itemRequestService.create(any(), any()))
+				.thenReturn(itemRequestResponseDto);
 
-    @BeforeEach
-    void setUp() {
-        mvc = MockMvcBuilders
-                .standaloneSetup(controller)
-                .setControllerAdvice(new ErrorHandler())
-                .build();
+		mvc.perform(post("/requests")
+						.header("X-Sharer-User-Id", "1")
+						.content(mapper.writeValueAsString(itemRequestCreateDto))
+						.characterEncoding(StandardCharsets.UTF_8)
+						.contentType(MediaType.APPLICATION_JSON)
+						.accept(MediaType.APPLICATION_JSON))
+				.andExpect(status().isOk())
+				.andExpect(jsonPath("$.id", is(itemRequestResponseDto.getId()), Long.class))
+				.andExpect(jsonPath("$.description", is(itemRequestResponseDto.getDescription())));
+	}
 
-        ItemRequestDto itemRequestDto1 = new ItemRequestDto();
-        itemRequestDto1.setDescription("Some description for the request");
-        itemRequestDto1.setRequestorId(1L);
-        itemRequestDto1.setId(1L);
-        ItemRequestDto itemRequestDto2 = new ItemRequestDto();
-        itemRequestDto2.setDescription("Another description for the request");
-        itemRequestDto2.setRequestorId(1L);
-        itemRequestDto2.setId(2L);
-        this.list = Arrays.asList(itemRequestDto1, itemRequestDto2);
-    }
+	@Test
+	void shouldReturnList() throws Exception {
+		when(itemRequestService.getRequestListByRequester(any()))
+				.thenReturn(List.of(itemRequestResponseDto, itemRequestResponseDto2));
 
-    @Test
-    public void shouldReturnOk() throws Exception {
+		mvc.perform(get("/requests")
+						.header("X-Sharer-User-Id", "1")
+						.characterEncoding(StandardCharsets.UTF_8)
+						.contentType(MediaType.APPLICATION_JSON)
+						.accept(MediaType.APPLICATION_JSON))
+				.andExpect(status().isOk())
+				.andExpect(jsonPath("$", hasSize(2)))
+				.andExpect(jsonPath("$[0].id", is(1)))
+				.andExpect(jsonPath("$[0].description", is(itemRequestResponseDto.getDescription())));
+	}
 
-        when(itemRequestService.getRequestListByPages(any(), anyInt(), anyInt())).thenReturn(list);
-
-        this.mvc.perform(get("/requests/all")
-                        .header("X-Sharer-User-Id", "2")
-                        .param("from", "0")
-                        .param("size", "10")
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-               .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void givenAnInvalidRequestDtoShouldThrowError() throws Exception {
-        ItemRequestDto itemRequestDto = new ItemRequestDto();
-        mvc.perform(post("/requests")
-                        .header("X-Sharer-User-Id", "2")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(mapper.writeValueAsString(itemRequestDto)))
-                .andExpect(status().isBadRequest());
-    }
-
-
-    @Test
-    void create() throws Exception {
-
-        ItemRequestDto itemRequestDto2 = new ItemRequestDto();
-        itemRequestDto2.setDescription("Another description for the request");
-
-        when(itemRequestService.create(any(), any()))
-                .thenReturn(itemRequestDto2);
-
-        mvc.perform(post("/requests")
-                        .header("X-Sharer-User-Id", "1")
-                        .content(mapper.writeValueAsString(itemRequestDto2))
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(itemRequestDto2.getId()), Long.class))
-                .andExpect(jsonPath("$.description", is(itemRequestDto2.getDescription())));
-    }
-
-    @Test
-    void shouldReturnList() throws Exception {
-
-        when(itemRequestService.getRequestListByRequestor(any())).thenReturn(list);
-
-        mvc.perform(get("/requests")
-                        .header("X-Sharer-User-Id", "1")
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].description", is("Some description for the request")));
-    }
-
-    @Test
-    void shouldReturnItemRequest() throws Exception {
-        final Long itemRequestId = 1L;
-        ItemRequestDto itemRequestDto2 = new ItemRequestDto();
-        itemRequestDto2.setDescription("Another description for the request");
-        itemRequestDto2.setId(2L);
-        when(itemRequestService.getRequestByID(anyLong(), anyLong())).thenReturn(itemRequestDto2);
-        mvc.perform(get("/requests/{id}", itemRequestId)
-                        .header("X-Sharer-User-Id", "1")
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.description", is(itemRequestDto2.getDescription())));
-    }
-
-    @Test
-    void shouldReturnNotFound() throws Exception {
-        given(itemRequestService.getRequestByID(anyLong(), anyLong())).willThrow(new NotFoundException("не найден"));
-        mvc.perform(get("/requests/{id}", 2)
-                        .header("X-Sharer-User-Id", "1")
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testCreateWithoutDescription() throws Exception {
-        ItemRequestDto itemRequestDto = new ItemRequestDto();
-        mvc.perform(post("/requests")
-                        .header("X-Sharer-User-Id", "1")
-                        .content(mapper.writeValueAsString(itemRequestDto))
-                        .characterEncoding(StandardCharsets.UTF_8)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
-    }
+	@Test
+	void shouldReturnNotFound() throws Exception {
+		given(itemRequestService.getRequestByID(anyLong(), anyLong())).willThrow(new ItemNotFoundException("не найден"));
+		mvc.perform(get("/requests/{id}", 2)
+						.header("X-Sharer-User-Id", "1")
+						.characterEncoding(StandardCharsets.UTF_8)
+						.contentType(MediaType.APPLICATION_JSON)
+						.accept(MediaType.APPLICATION_JSON))
+				.andExpect(status().isNotFound());
+	}
 }
